--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.8
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
+        pip install flake8 coverage
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
@@ -33,4 +33,9 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with unittest
       run: |
-        python -m unittest tests/*.py
+        coverage run -m unittest tests/*.py
+        coverage xml
+    - name: Upload coverage
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
