--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 coverage
-        pip install -r requirements.txt
+        pip install -e .
     # Run flake8 to do basic code quality checks, the output will appear in the action log
     - name: Lint with flake8
       run: |
