--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 coverage setuptools\>=61
         pip install -e .
+        pip list
     # Run flake8 to do basic code quality checks, the output will appear in the action log
     - name: Lint with flake8
       run: |
