--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,15 +24,15 @@ jobs:
     - uses: actions/checkout@v2
     # Setup Python using a existing action "actions/setup-python@v2" from Github's library of actions
     # Arguments are provided to this action using the key-values under "with"
-    - name: Set up Python 3.7
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.8
     # Install the requirements for this library plus those for running out tests (flake8 and coverage)
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 coverage setuptools\>=61
+        pip install flake8 coverage setuptools\>=61,\<62
         pip install -e .
         pip list
     # Run flake8 to do basic code quality checks, the output will appear in the action log
