--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,8 +45,7 @@ jobs:
     # Run the unit tests using the coverage program and create the XML output file
     - name: Test with unittest
       run: |
-        coverage run -m unittest tests/*.py
-        coverage xml
+        ./runtests.py --coverage
     # Using Codecov's action, upload the coverage report for the triggering commit/PR
     - name: Upload coverage
       uses: codecov/codecov-action@v1
